--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,56 @@
 	padding: 0;
 	font-family: Arial, sans-serif;
 }
+
+.container {
+	width: 1200px;
+	margin: 100px auto;
+	border: 1px solid #ccc;
+}
+
+header {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 10px 40px 10px 110px;
+	background-color: #1B5589;
+	background-image: url(../images/earlybirds-brands.png);
+	background-repeat: no-repeat;
+	-webkit-background-size: 48px;
+	background-size: 40px;
+	background-position: 40px 50%;
+
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: center;
+	align-items: center;
+}
+
+header ul {
+	flex-grow: 1;
+	list-style-type: none;
+}
+
+header li {
+	display: inline-block;
+	margin-right: 15px;
+}
+
+header li a {
+	text-decoration: none;
+	color: #7B9CBB;
+	font-size: 14px;
+}
+
+header li a:hover {
+	color: #fff;
+}
+
+header img {
+	display: block;
+	width: 48px;
+}
