--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,106 @@ header img {
 	display: block;
 	width: 48px;
 }
+
+/*////////MAIN/////////*/
+
+main {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 30px 40px 20px;
+}
+
+main h1 {
+	text-align: center;
+	color: #4C4F57;
+	margin-bottom: 30px;
+	font-size: 30px;
+	font-weight: 100;
+}
+
+main .row {
+	width: 100%;
+	background-color: #CCE5FF;
+	border-radius: 4px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+
+main .row h2 {
+	flex: 5;
+	text-align: center;
+	padding: 15px 0;
+	margin-left: 20px;
+	font-size: 16px;
+	font-weight: 300;
+	color: #0354A9;
+	text-transform: uppercase;
+}
+
+main .row h2:first-child {
+	flex: 2;
+	margin-left: 0;
+}
+
+		/*////////form/////////*/
+
+main form {
+	padding-top: 20px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+
+main form fieldset {
+	flex: 5;
+	border: none;
+	margin-right: 20px;
+}
+
+main form .photo {
+	flex: 2;
+}
+
+main form .photo img {
+	display: block;
+	width: 100%;
+	/*height: 256px;*/
+}
+
+main form .pwd {
+	margin-right: 0;
+}
+
+main form fieldset input {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 22px;
+	border: 1px solid #eee;
+	border-radius: 4px;
+    line-height: 16px;
+}
+
+main form button {
+	width: 100%;
+	padding: 10px;
+	background-color: #6C757D;
+	color: #fff;
+	font-size: 16px;
+	border: none;
+	border-radius: 4px;	
+}
+
+main form button:hover {
+	cursor: pointer;
+	background-color: #4B5157;
+}
